--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -17,6 +17,13 @@
   border-bottom: 2px solid currentColor; */
 }
 
+#starlite-hero { overflow: visible; margin-bottom: 1rem; }
+#starlite-hero .st0{fill:#FFAE57;}
+#starlite-hero .st1{fill:#FFD580;}
+#starlite-hero .st2{fill:#D6DBE1;}
+#starlite-hero .st3{fill:#FFFFFF;}
+#starlite-hero .st4{fill:var(--md-default-fg-color);}
+
 .md-search__form {
   background-color: var(--md-default-bg-color) !important;
 }
